--- a/app/views/pins/index.html.haml
+++ b/app/views/pins/index.html.haml
@@ -1,3 +1,10 @@
-- @pins.each do |pin|
-    = link_to (image_tag pin.image.url(:medium)) , pin
-    %h2= link_to pin.title, pin
+#pins.transitions-enable
+
+    - @pins.each do |pin|
+        .box.panel.panel-dafault
+            = link_to (image_tag pin.image.url) , pin
+            .panel-body
+                %h2= link_to pin.title, pin
+                %p.user
+                Submitted by
+                = pin.user.try(:email)
