--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -1,10 +1,20 @@
-= image_tag @pin.image.url(:medium)
-%h1= @pin.title
-%p= @pin.description
-Submitted by
-%p= @pin.user.try(:email)
-%br/
-
-= link_to "Back", root_path
-= link_to "Edit", edit_pin_path
-= link_to "Delete", pin_path , method: :delete, data:{confirm: "Are you sure?"}
+#pin_show.row
+    .col-md-8.col-md-offsset-2
+        .panel.panel-dafault
+            .panel-heading.pin_image
+            = image_tag @pin.image.url
+        .panel-body
+            %h1= @pin.title
+            %p= @pin.description
+            Submitted by
+            = @pin.user.try(:email)
+        .panel-footer
+            .row
+                .col-md-6
+                    %p.user
+                    Submitted by
+                    = @pin.user.try(:email)
+                .col-md-6
+                    .btn-group.pull-right
+                        = link_to "Edit", edit_pin_path , class: "btn btn-default"
+                        = link_to "Delete", pin_path , method: :delete, data:{confirm: "Are you sure?"} ,class: "btn btn-default"
