--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -1,5 +1,5 @@
 #pin_show.row
-    .col-md-8.col-md-offsset-2
+    .col-md-8.col-md-offset-2
         .panel.panel-dafault
             .panel-heading.pin_image
             = image_tag @pin.image.url
@@ -16,5 +16,8 @@
                     = @pin.user.try(:email)
                 .col-md-6
                     .btn-group.pull-right
+                        = link_to like_pin_path(@pin), method: :put, class: "btn btn-default" do
+                            %span.glyphicon.glyphicon-heart
+                                =@pin.get_upvotes.size
                         = link_to "Edit", edit_pin_path , class: "btn btn-default"
                         = link_to "Delete", pin_path , method: :delete, data:{confirm: "Are you sure?"} ,class: "btn btn-default"
