--- a/app/views/pins/new.html.haml
+++ b/app/views/pins/new.html.haml
@@ -1,7 +1,8 @@
 .col-md-6.col-md-offset-3
+    .row
+        .panel.panel-default
+            .panel-heading
 
-    %h1 New Form
-
-    =render 'form'
-
-    =link_to "Back" , root_path
+                %h1 New Form
+            .panel-body
+                =render 'form'
